<resources>
    <string name="app_name">P2PWiFiManagerRoot</string>
    <string name="disabled_permissions_denied">Disabled (Permissions Denied)</string>
    <string name="service_starting">Service starting</string>
    <string name="authenticator_app_service">Authenticator App Service</string>
    <string name="enable_authenticator">Enable Authenticator</string>
    <string name="current_status">Current Status:</string>
    <string name="service_inactive">Service Inactive</string>
    <string name="enable_ssh_server_text">When enabled, this service broadcasts its availability on the local network and listens for secure commands to start the SSH server.</string>
    <string name="activate_device_administrator">ACTIVATE Device Administrator</string>
    <string name="disabled_device_admin_needed">Disabled (Device Admin Needed)</string>
    <string name="service_stopped_by_user">Service stopped by user.</string>
    <string name="device_administrator_active">Device Administrator ACTIVE</string>
    <string name="service_starting_via_root">Service starting (via root)...</string>
</resources>